Right-align headers

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       width: 32px;
       height: 32px;
     }
+
+    .ui.table thead th:not(:first-child) {
+      text-align: right;
+    }
   </style>
   <!-- <link rel="stylesheet" type="text/css" href="./style.css"> -->
 </head>
