--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <table id="table" class="ui table celled definition compact">
+    <table id="table" class="ui table celled definition compact unstackable">
       <thead>
         <tr>
           <th>Anime</th>
