--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       margin: auto;
     }
 
-    th.title.positive {
+    th.title.positive a {
       color: hsl(93, 72%, 25%);
     }
 
@@ -102,7 +102,9 @@
           <th class="title"
               v-bind:class="{positive: entry.media.status === 'RELEASING',
                              finished: entry.media.status === 'FINISHED'}">
-            {{ entry.media.title.userPreferred }}
+            <a v-bind:href="`https://anilist.co/anime/${entry.media.id}`">
+              {{ getMediaTitle(entry.media) }}
+            </a>
           </th>
           <td v-for="user of orderedUsers"
               v-if="entry.users.has(user.name)"
