Display all entries if only one user
Also filter entries in computed property as it makes the template much
simpler.

--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr v-for="entry of entries"
-            v-if="entry.users.size > 1">
+        <tr v-for="entry of entries">
           <th class="title"
               v-bind:class="{positive: entry.media.status === 'RELEASING',
                              finished: entry.media.status === 'FINISHED'}">
