--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 
   <!-- Custom -->
-  <script src="./query.js"></script>
+  <script src="./query.js" defer></script>
+  <script src="./app.js" defer></script>
+
   <style type="text/css">
     #app {
       margin: 2em;
@@ -161,6 +163,5 @@
   </div>
   </div>
 
-  <script src="./app.js"></script>
 </body>
 </html>
