Sexy border-radius

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     th .avatar {
       width: 32px;
       height: 32px;
+      border-radius: 4px;
     }
 
     /* Must be on th because of chrome (and edge) bug
