Show number of shows below the selected threshold
Makes it easier to figure out why the list is empty...

--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
           {{ stats.count }} {{ (orderedUsers.length > 1) ? "shared" : "" }} anime
           {{ stats.countReleasing > 0 ? `, ${stats.countReleasing} releasing` : "" }}
           {{ stats.hidden > 0 ? `, ${stats.hidden} hidden` : "" }}
+          {{ stats.belowThreshold > 0 ? `, ${stats.belowThreshold} below threshold` : "" }}
         </th>
       </tfoot>
       <!-- TODO footer with buttons to show/hide selected shows -->
