--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
   </head>
-  <body onhashchange="vm.fetchLists()">
+  <body>
     <noscript>
       <strong>JavaScript is required to view this site. Please enable it to continue.</strong>
     </noscript>
