Add dark theme switch (and default to dark)
I'm totally not satisfied with how this looks, but at this point I
honestly can't be bothered anymore. There is simply no sane good-looking
theme for Semantic UI and this cyborg thing was the most usable one I
found. It still required a few tweaks.

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>AniTogether</title>
+
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
-    <title>AniTogether</title>
+
+    <link rel="preload" as="font" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin">
+    <link class="theme" rel="stylesheet" type="text/css" href="css/semantic.cyborg.min.css">
+    <link class="theme" rel="stylesheet" type="text/css" href="css/semantic.cyborg.custom.css">
+    <link class="theme" rel="preload" as="style" href="css/semantic.min.css">
+    <link class="theme" rel="preload" as="style" href="css/semantic.custom.css">
   </head>
   <body>
     <noscript>
