The external Google fonts reference is actually CSS

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
 
-    <link rel="preload" as="font" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin">
   </head>
   <body>
     <noscript>
